ADD: data collector using firestore
